fix table text overlap

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -90,6 +90,13 @@ h6 {
   color: #5f75ee;
 }
 
+/* Custom text ellipsis for leaderboard data table */
+.dtable [data-tag="allowRowEvents"] {
+  text-overflow: ellipsis;
+  white-space: nowrap !important;
+  overflow: hidden !important;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
